--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
