--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,18 @@
         {
           "key": "X-Frame-Options",
           "value": "DENY"
+        },
+        {
+          "key": "Content-Script-Type",
+          "value": "text/css"
+        },
+        {
+          "key": "Content-Style-Type",
+          "value": "text/css"
+        },
+        {
+          "key": "X-Content-Script-Type",
+          "value": "text/css"
         }
       ]
     },
